--- a/index.css
+++ b/index.css
@@ -1,21 +1,24 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,800&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:900&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
+  transition: background-color 0.2s;
 }
 
 * {
   font-family: 'Open Sans', sans-serif;
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
+  transition: color 0.2s;
 }
 
 h1, h2, h3, h4, h5, h6, p {
   margin: 0;
   padding: 0;
+  transition: color 0.2s;
 }
 
 h1,
@@ -27,24 +30,51 @@ h3 {
 h1 {
   font-weight: 800;
   font-size: 2.5rem;
-  padding-bottom: 1.4rem;
+  line-height: 3.2rem;
+  padding-bottom: 10px;
 }
 
 h2 {
   font-weight: 800;
   font-size: 1.8rem;
-  padding-bottom: 0.6rem;
+  line-height: 2.45rem;
+  padding-bottom: 5px;
 }
 
 h3 {
   font-weight: 800;
-  font-size: 1.6rem;
-  padding-bottom: 0.4rem;
+  font-size: 1.5rem;
+  padding-bottom: 5px;
+}
+
+h5 {
+  font-weight: 400;
+  font-size: 1em;
+  padding-bottom: 5px;
 }
 
 p {
-  font-size: 1rem;
-  padding-bottom: 1rem;
+  font-size: 1.1rem;
+  line-height: 1.9rem;
+  margin-bottom: 20px;
+}
+
+code, code *,
+pre, pre * {
+  font-size: 0.95rem;
+  font-family: monospace;
+}
+
+pre {
+  padding: 0.65rem !important;
+  border-radius: 7px;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.inline-code {
+  display: inline !important;
+  padding: 6px !important;
 }
 
 .hr {
