--- a/index.css
+++ b/index.css
@@ -1,37 +1,32 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Montserrat:900&display=swap');
-
 html,
 body {
   padding: 0;
   margin: 0;
-  transition: background-color 0.2s;
+  background-color: #020917;
 }
 
 * {
   font-family: 'Open Sans', sans-serif;
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  transition: color 0.2s;
 }
 
 h1, h2, h3, h4, h5, h6, p {
   margin: 0;
   padding: 0;
-  transition: color 0.2s;
+  color: #fff;
 }
 
 h1,
-h2,
-h3 {
+h2 {
   font-family: 'Montserrat', sans-serif;
 }
 
 h1 {
   font-weight: 800;
-  font-size: 2.5rem;
+  font-size: 2.6rem;
   line-height: 3.2rem;
-  padding-bottom: 10px;
+  padding-bottom: 15px;
 }
 
 h2 {
@@ -42,8 +37,8 @@ h2 {
 }
 
 h3 {
-  font-weight: 800;
-  font-size: 1.5rem;
+  font-weight: 700;
+  font-size: 1.3rem;
   padding-bottom: 5px;
 }
 
@@ -56,7 +51,7 @@ h5 {
 p {
   font-size: 1.1rem;
   line-height: 1.9rem;
-  margin-bottom: 20px;
+  margin-bottom: 22px;
 }
 
 code, code *,
@@ -69,12 +64,7 @@ pre {
   padding: 1rem !important;
   border-radius: 7px;
   margin-top: 0;
-  margin-bottom: 20px;
-}
-
-.inline-code {
-  display: inline !important;
-  padding: 6px !important;
+  margin-bottom: 22px;
 }
 
 .hr {
